<resources>
    <string name="app_name">Aula3App</string>
    <string name="valor_inicial">"Valor inicial:"</string>
    <string name="hint_valor_inicial">"Valor em R$. Ex: 1700.00"</string>
    <string name="aplicacao_mensal">"Aplicação mensal:"</string>
    <string name="hint_aplicacao_mensal">"Ex: 100.00"</string>
    <string name="tempo_aplicacao">Tempo da aplicação:</string>
    <string name="hint_tempo_aplicacao">"Em meses"</string>
    <string name="taxa">Taxa:</string>
    <string name="hint_taxa">"Ex: 0.02"</string>
    <string name="button_calcular">"Calcular"</string>
    <string name="poupanca">"Poupança"</string>
    <string name="consumo">"Consumo total R$:"</string>
    <string name="couvert">"Couvert artístico R$:"</string>
    <string name="dividir">Dividir conta por:</string>
    <string name="calcular">Calcular conta final</string>
    <string name="taxa_servico">Taxa de serviço (10%) R$:</string>
    <string name="conta_total">Conta total R$:</string>
    <string name="valor_pessoa">Valor por pessoa R$:</string>
</resources>